--- a/Plateformer/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Plateformer/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -235,7 +235,7 @@ DataValidationSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcut
 GameplayDebuggerUserSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale
 GameplayTagsDeveloperSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale
 LogVisualizerSettings=EditorStyleSettings.Graphs.Preview,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Dash.IA_Dash
 K2Node_VariableGet=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
 BP_ThirdPersonCharacter_C=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.Collision.Collision
 BP_FireWall_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement
@@ -252,7 +252,7 @@ K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blu
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,CapsuleComponent.Collision.Collision
 K2Node_MacroInstance=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces
 K2Node_CallFunction=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces
-InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move
+InputAction=
 StaticMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Collision.Collision,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,CapsuleComponent.Collision.Collision
 WBP_PlayerUI_C=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.Collision.Collision
 K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,CapsuleComponent.Collision.Collision
@@ -260,7 +260,7 @@ BP_WaterPack_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Bluepri
 K2Node_CustomEvent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
 Widget=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,CapsuleComponent.Collision.Collision
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.01 - BaseColor,MaterialEditorInstanceConstant.ParameterGroups.02 - Textures,MaterialEditorInstanceConstant.ParameterGroups.03 - Logo,MaterialEditorInstanceConstant.ParameterGroups.04 - Diffraction
-MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.01 - BaseColor,MaterialEditorInstanceConstant.ParameterGroups.02 - Textures,MaterialEditorInstanceConstant.ParameterGroups.03 - Logo,MaterialEditorInstanceConstant.ParameterGroups.04 - Diffraction
+MaterialInstanceConstant=
 BoxComponent=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
 BP_BrokenWall_C=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
 
@@ -311,7 +311,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/Blueprints/Actors/BP_BrokenWall.BP_BrokenWall
@@ -322,7 +322,9 @@ OpenAssetsAtExit=/Game/Blueprints/Actors/BP_EndLevel.BP_EndLevel
 OpenAssetsAtExit=/Game/Blueprints/Actors/BP_WaterPack.BP_WaterPack
 OpenAssetsAtExit=/Game/Blueprints/BPI_Interact.BPI_Interact
 OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
+OpenAssetsAtExit=/Game/Materials/M_Hit.M_Hit
 OpenAssetsAtExit=/Game/Characters/Mannequins/Materials/Instances/Quinn/MI_Quinn_01.MI_Quinn_01
+RecentAssetEditors=MaterialInstanceEditor
 RecentAssetEditors=MaterialEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
@@ -362,6 +364,7 @@ Visual=
 BoxComponent="\"Object.Shape.BoxExtent\" "
 ShapeComponent="\"Object.Shape.BoxExtent\" "
 PrimitiveComponent="\"Object.Shape.BoxExtent\" "
+MaterialEditorInstanceConstant="\"Object.ParameterGroups.ParameterGroups[0].Parameters.Parameters[8].Object.ParameterValue\" "
 
 [DetailCategories]
 EditorStyleSettings.Theme=True
@@ -1145,6 +1148,8 @@ CharacterMovementComponent.Character Movement (General Settings)=False
 /Game/Blueprints/UI/WBP_PlayerUI.WBP_PlayerUI=0
 /Game/Blueprints/Actors/BP_EndLevel.BP_EndLevel=0
 /Game/Blueprints/Actors/BP_WaterPack.BP_WaterPack=0
+/Game/Materials/M_Hit.M_Hit=0
+/Game/Characters/Mannequins/Materials/Instances/Quinn/MI_Quinn_01.MI_Quinn_01=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Actors/BP_BrokenWall.BP_BrokenWall;
@@ -1306,7 +1311,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=334.400
-WindowSize=X=1283.200 Y=723.200
+WindowSize=X=1284.800 Y=724.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2399,4 +2404,178 @@ HierarchicalLODUtilities.LastCompileMethod=Unknown
 [Python]
 LastDirectory=
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[/Script/UnrealEd.MaterialEditorOptions]
+bShowGrid=False
+bHideUnrelatedNodes=False
+bUseUnsortedMenus=False
+
+[MaterialEditor]
+PrimType=1
+
+[/Script/UnrealEd.MaterialStatsOptions]
+bPlatformUsed[0]=0
+bPlatformUsed[1]=0
+bPlatformUsed[2]=0
+bPlatformUsed[3]=0
+bPlatformUsed[4]=0
+bPlatformUsed[5]=0
+bPlatformUsed[6]=0
+bPlatformUsed[7]=0
+bPlatformUsed[8]=0
+bPlatformUsed[9]=0
+bPlatformUsed[10]=0
+bPlatformUsed[11]=0
+bPlatformUsed[12]=0
+bPlatformUsed[13]=0
+bPlatformUsed[14]=0
+bPlatformUsed[15]=0
+bPlatformUsed[16]=0
+bPlatformUsed[17]=0
+bPlatformUsed[18]=0
+bPlatformUsed[19]=0
+bPlatformUsed[20]=0
+bPlatformUsed[21]=0
+bPlatformUsed[22]=0
+bPlatformUsed[23]=0
+bPlatformUsed[24]=0
+bPlatformUsed[25]=0
+bPlatformUsed[26]=0
+bPlatformUsed[27]=0
+bPlatformUsed[28]=0
+bPlatformUsed[29]=0
+bPlatformUsed[30]=0
+bPlatformUsed[31]=0
+bPlatformUsed[32]=0
+bPlatformUsed[33]=0
+bPlatformUsed[34]=0
+bPlatformUsed[35]=0
+bPlatformUsed[36]=0
+bPlatformUsed[37]=0
+bPlatformUsed[38]=0
+bPlatformUsed[39]=0
+bPlatformUsed[40]=0
+bPlatformUsed[41]=0
+bPlatformUsed[42]=0
+bPlatformUsed[43]=0
+bPlatformUsed[44]=0
+bPlatformUsed[45]=0
+bPlatformUsed[46]=0
+bPlatformUsed[47]=0
+bPlatformUsed[48]=0
+bPlatformUsed[49]=1
+bPlatformUsed[50]=0
+bPlatformUsed[51]=0
+bPlatformUsed[52]=0
+bPlatformUsed[53]=0
+bPlatformUsed[54]=0
+bPlatformUsed[55]=0
+bPlatformUsed[56]=0
+bPlatformUsed[57]=0
+bPlatformUsed[58]=0
+bPlatformUsed[59]=0
+bPlatformUsed[60]=0
+bPlatformUsed[61]=0
+bPlatformUsed[62]=0
+bPlatformUsed[63]=0
+bPlatformUsed[64]=0
+bPlatformUsed[65]=0
+bPlatformUsed[66]=0
+bPlatformUsed[67]=0
+bPlatformUsed[68]=0
+bPlatformUsed[69]=0
+bPlatformUsed[70]=0
+bPlatformUsed[71]=0
+bPlatformUsed[72]=0
+bPlatformUsed[73]=0
+bPlatformUsed[74]=0
+bPlatformUsed[75]=0
+bPlatformUsed[76]=0
+bPlatformUsed[77]=0
+bPlatformUsed[78]=0
+bPlatformUsed[79]=0
+bPlatformUsed[80]=0
+bPlatformUsed[81]=0
+bPlatformUsed[82]=0
+bPlatformUsed[83]=0
+bPlatformUsed[84]=0
+bPlatformUsed[85]=0
+bPlatformUsed[86]=0
+bPlatformUsed[87]=0
+bPlatformUsed[88]=0
+bPlatformUsed[89]=0
+bPlatformUsed[90]=0
+bPlatformUsed[91]=0
+bPlatformUsed[92]=0
+bPlatformUsed[93]=0
+bPlatformUsed[94]=0
+bPlatformUsed[95]=0
+bPlatformUsed[96]=0
+bPlatformUsed[97]=0
+bPlatformUsed[98]=0
+bPlatformUsed[99]=0
+bPlatformUsed[100]=0
+bPlatformUsed[101]=0
+bPlatformUsed[102]=0
+bPlatformUsed[103]=0
+bPlatformUsed[104]=0
+bPlatformUsed[105]=0
+bPlatformUsed[106]=0
+bPlatformUsed[107]=0
+bPlatformUsed[108]=0
+bPlatformUsed[109]=0
+bPlatformUsed[110]=0
+bPlatformUsed[111]=0
+bPlatformUsed[112]=0
+bPlatformUsed[113]=0
+bPlatformUsed[114]=0
+bPlatformUsed[115]=0
+bPlatformUsed[116]=0
+bPlatformUsed[117]=0
+bPlatformUsed[118]=0
+bPlatformUsed[119]=0
+bPlatformUsed[120]=0
+bPlatformUsed[121]=0
+bPlatformUsed[122]=0
+bPlatformUsed[123]=0
+bPlatformUsed[124]=0
+bPlatformUsed[125]=0
+bPlatformUsed[126]=0
+bPlatformUsed[127]=0
+bPlatformUsed[128]=0
+bPlatformUsed[129]=0
+bPlatformUsed[130]=0
+bPlatformUsed[131]=0
+bPlatformUsed[132]=0
+bPlatformUsed[133]=0
+bPlatformUsed[134]=0
+bPlatformUsed[135]=0
+bPlatformUsed[136]=0
+bPlatformUsed[137]=0
+bPlatformUsed[138]=0
+bPlatformUsed[139]=0
+bPlatformUsed[140]=0
+bPlatformUsed[141]=0
+bPlatformUsed[142]=0
+bPlatformUsed[143]=0
+bPlatformUsed[144]=0
+bPlatformUsed[145]=0
+bPlatformUsed[146]=0
+bPlatformUsed[147]=0
+bPlatformUsed[148]=0
+bPlatformUsed[149]=0
+bPlatformUsed[150]=0
+bPlatformUsed[151]=0
+bPlatformUsed[152]=0
+bPlatformUsed[153]=0
+bPlatformUsed[154]=0
+bMaterialQualityUsed[0]=0
+bMaterialQualityUsed[1]=1
+bMaterialQualityUsed[2]=0
+bMaterialQualityUsed[3]=0
+
+[MaterialInstanceEditor]
+bShowGrid=True
+bDrawGrid=False
+PrimType=1
 
