--- a/Plateformer/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Plateformer/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -248,7 +248,7 @@ Blueprint=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inher
 MulticastInlineDelegatePropertyWrapper=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
 BP_Victim_C=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
 CapsuleComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList
-SkeletalMeshComponent=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList
+SkeletalMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList
 CharacterMovementComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList
 K2Node_VariableSet=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NewVar
 StaticMeshActor=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,PropertyWrapper.DefaultValueCategory.NewVar
@@ -257,7 +257,7 @@ K2Node_CallFunction=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Bl
 InputAction=
 StaticMeshComponent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision
 WBP_PlayerUI_C=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList
-K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
+K2Node=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList
 BP_WaterPack_C=Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,K2Node_VariableGet.DefaultValueCategory.CharacterMovement,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision
 K2Node_CustomEvent=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,BoxComponent.Collision.Collision,CapsuleComponent.Collision.Collision,StaticMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Materials.MaterialList
 Widget=K2Node_VariableGet.DefaultValueCategory.CharacterMovement,Blueprint.Interfaces.Implemented Interfaces,Blueprint.Interfaces.Inherited Interfaces,CapsuleComponent.Collision.Collision
@@ -346,25 +346,13 @@ ToolbarOpenBPClass.ThumbnailSize=2
 ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
-LastLevel=/Game/ThirdPerson/Maps/MapLabo
+LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Blueprints/Actors/BP_Bumper.BP_Bumper
-OpenAssetsAtExit=/Game/Blueprints/UI/WBP_PlayerUI.WBP_PlayerUI
-OpenAssetsAtExit=/Game/Blueprints/Actors/BP_Fire.BP_Fire
-OpenAssetsAtExit=/Game/Blueprints/UI/WBP_Warning.WBP_Warning
-OpenAssetsAtExit=/Game/Blueprints/Actors/BP_EndLevel.BP_EndLevel
-OpenAssetsAtExit=/Game/Blueprints/BPC_UIController.BPC_UIController
-OpenAssetsAtExit=/Game/Blueprints/Actors/BP_Wind.BP_Wind
-OpenAssetsAtExit=/Game/Blueprints/UI/WBP_Menu.WBP_Menu
-OpenAssetsAtExit=/Game/Blueprints/UI/WBP_Button.WBP_Button
-OpenAssetsAtExit=/Game/Blueprints/Actors/BP_Lava.BP_Lava
-OpenAssetsAtExit=/Game/Blueprints/Actors/BP_StopWall.BP_StopWall
-OpenAssetsAtExit=/Game/Blueprints/Actors/BP_TrapWall.BP_TrapWall
-OpenAssetsAtExit=/Game/Blueprints/UI/WBP_LevelPicker.WBP_LevelPicker
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=Niagara
 RecentAssetEditors=Niagara
@@ -382,7 +370,6 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -428,7 +415,7 @@ NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object\" "
 StaticMesh="\"Object\" "
 StreamableRenderAsset="\"Object\" "
 StaticMeshActor=
@@ -1709,25 +1696,25 @@ ObjectMixerEditorSettings=True
 GameplayDebuggerUserSettings=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/UI/WBP_LevelPicker
-MRUItem1=/Game/Niagara/NS_Gaz
-MRUItem2=/Game/Niagara/NS_Fire
-MRUItem3=/Game/ThirdPerson/Maps/MapLabo
-MRUItem4=/Game/ThirdPerson/Maps/MapCylinder
-MRUItem5=/Game/Blueprints/Actors/BP_TrapWall
-MRUItem6=/Game/ThirdPerson/Maps/MapLava
-MRUItem7=/Game/Blueprints/Actors/BP_StopWall
-MRUItem8=/Game/Blueprints/Actors/BP_Lava
-MRUItem9=/Game/Blueprints/UI/WBP_Button
-MRUItem10=/Game/Blueprints/UI/WBP_Menu
-MRUItem11=/Game/Blueprints/Actors/BP_Wind
-MRUItem12=/Game/Blueprints/BPC_UIController
-MRUItem13=/Game/Blueprints/Actors/BP_EndLevel
-MRUItem14=/Game/Blueprints/UI/WBP_Warning
-MRUItem15=/Game/Blueprints/Actors/BP_Fire
-MRUItem16=/Game/Blueprints/UI/WBP_PlayerUI
-MRUItem17=/Game/Blueprints/Actors/BP_Bumper
-MRUItem18=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/Blueprints/UI/WBP_LevelPicker
+MRUItem2=/Game/Niagara/NS_Gaz
+MRUItem3=/Game/Niagara/NS_Fire
+MRUItem4=/Game/ThirdPerson/Maps/MapLabo
+MRUItem5=/Game/ThirdPerson/Maps/MapCylinder
+MRUItem6=/Game/Blueprints/Actors/BP_TrapWall
+MRUItem7=/Game/ThirdPerson/Maps/MapLava
+MRUItem8=/Game/Blueprints/Actors/BP_StopWall
+MRUItem9=/Game/Blueprints/Actors/BP_Lava
+MRUItem10=/Game/Blueprints/UI/WBP_Button
+MRUItem11=/Game/Blueprints/UI/WBP_Menu
+MRUItem12=/Game/Blueprints/Actors/BP_Wind
+MRUItem13=/Game/Blueprints/BPC_UIController
+MRUItem14=/Game/Blueprints/Actors/BP_EndLevel
+MRUItem15=/Game/Blueprints/UI/WBP_Warning
+MRUItem16=/Game/Blueprints/Actors/BP_Fire
+MRUItem17=/Game/Blueprints/UI/WBP_PlayerUI
+MRUItem18=/Game/Blueprints/Actors/BP_Bumper
 MRUItem19=/Game/Blueprints/Actors/BP_Key
 MRUItem20=/Game/Blueprints/Actors/BP_Collectible
 MRUItem21=/Game/Blueprints/E_TriggerEvent
@@ -1964,8 +1951,8 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=0.000 Y=84.000
-WindowSize=X=1152.000 Y=740.000
-InitiallyMaximized=True
+WindowSize=X=1153.600 Y=741.600
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -2743,9 +2730,9 @@ LightMixer.TimeStamp=2023.11.20-08.10.41
 LightMixer.LastCompileMethod=External
 ObjectMixerEditor.TimeStamp=2023.11.20-08.10.41
 ObjectMixerEditor.LastCompileMethod=External
-Bridge.TimeStamp=2023.11.20-08.31.21
+Bridge.TimeStamp=2023.12.14-08.23.42
 Bridge.LastCompileMethod=External
-MegascansPlugin.TimeStamp=2023.11.20-08.31.29
+MegascansPlugin.TimeStamp=2023.12.14-08.23.50
 MegascansPlugin.LastCompileMethod=External
 TakesCore.TimeStamp=2023.11.20-08.14.37
 TakesCore.LastCompileMethod=External
@@ -3058,8 +3045,8 @@ MaterialEditor.LastCompileMethod=External
 
 [Python]
 LastDirectory=
-RecentsFiles=S:/UE/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=C:/Program Files/Epic Games/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=S:/UE/UE_5.3/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
