add cable and phsyics

--- a/DomeKeeper/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DomeKeeper/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -163,6 +163,10 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings
 InputAction=
+PhysicsConstraintComponent=PhysicsConstraintComponent.Constraint Behavior.Projection,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive
+StaticMeshComponent=
+BP_ressources_C=StaticMeshComponent.Physics.ConstraintsGroup
+K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSize=2
@@ -201,29 +205,30 @@ MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
-CableComponent="\"Object\" \"Object.Cable.AttachEndTo\" "
+CableComponent="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[14]\" "
 SphereComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 StaticMeshComponent="\"Object\" "
+PhysicsConstraintComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/BP_ressources.BP_ressources
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=GenericAssetEditor
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/BP_ressources
-MRUItem1=/Game/ThirdPerson/Input/IMC_Default
-MRUItem2=/Game/ThirdPerson/Input/Actions/IA_Interact
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem2=/Game/ThirdPerson/Input/IMC_Default
+MRUItem3=/Game/ThirdPerson/Input/Actions/IA_Interact
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -384,6 +389,32 @@ K2Node_VariableGet.Events=True
 CableComponent.Sockets=True
 CableComponent.ComponentTick=True
 CableComponent.Events=True
+BP_ThirdPersonCharacter_C.Default=True
+PhysicsConstraintComponent.Variable=True
+PhysicsConstraintComponent.TransformCommon=True
+PhysicsConstraintComponent.Sockets=True
+PhysicsConstraintComponent.ComponentTick=True
+PhysicsConstraintComponent.Rendering=True
+PhysicsConstraintComponent.Constraint=True
+PhysicsConstraintComponent.Constraint Behavior=True
+PhysicsConstraintComponent.Tags=True
+PhysicsConstraintComponent.Linear Limits=True
+PhysicsConstraintComponent.Angular Limits=True
+PhysicsConstraintComponent.LinearMotor=True
+PhysicsConstraintComponent.AngularMotor=True
+PhysicsConstraintComponent.ComponentReplication=True
+PhysicsConstraintComponent.Cooking=True
+PhysicsConstraintComponent.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
