--- a/ShooterTopDown/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/ShooterTopDown/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -186,7 +186,7 @@ Advanced=False
 InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Look.IA_Look,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Shoot.IA_Shoot
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn_0,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,BP_AIZombie_C.Collision.Collision
 BP_SpawnAI_C=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn_0,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,CapsuleComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,BP_AIZombie_C.Collision.Collision
-SceneComponent=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn_0,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision,BP_AIZombie_C.Collision.Collision
+SceneComponent=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn_0,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,BP_AIZombie_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision
 BrushComponent=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn
 K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn_0,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision,BP_AIZombie_C.Collision.Collision
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn_0,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision,BP_AIZombie_C.Collision.Collision
@@ -204,7 +204,7 @@ BP_EnnemyProjectile_C=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,Proper
 InputAction=
 ProjectileMovementComponent=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision
 PlayerController=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,BP_AIZombie_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision
-BP_AIManager_C=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn_0,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision,BP_AIZombie_C.Collision.Collision
+BP_AIManager_C=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn_0,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision,BP_AIZombie_C.Collision.Collision
 K2Node_CallParentFunction=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision,BP_AIZombie_C.Collision.Collision
 Actor=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn_0,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,StaticMeshComponent.TransformCommon.Transform,StaticMeshComponent.Physics.ConstraintsGroup,BP_AIZombie_C.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision
 BP_IronFence_C=PropertyWrapper.DefaultValueCategory.EnemiesToSpawn,PropertyWrapper.DefaultValueCategory.EnemiesToSpawn_0,PropertyWrapper.DefaultValueCategory.EnemiesAlive,PropertyWrapper.DefaultValueCategory.Class,SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Collision.Collision,K2Node_VariableGet.DefaultValueCategory.EnemiesToSpawn,CapsuleComponent.Collision.Collision,BP_AIZombie_C.Collision.Collision
@@ -269,6 +269,10 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 CleanShutdown=True
 DebuggerAttached=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Actors/BP_PlayerProjectile.BP_PlayerProjectile
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Actors/BP_IronFence.BP_IronFence
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AI/BP_AIManager.BP_AIManager
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
@@ -279,9 +283,7 @@ RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=StaticMeshEditor
 RecentAssetEditors=StaticMeshEditor
@@ -293,19 +295,19 @@ RecentAssetEditors=MaterialEditor
 RecentAssetEditors=StaticMeshEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/ThirdPerson/Blueprints/Actors/BP_EnnemyProjectile
-MRUItem1=/Game/ThirdPerson/Blueprints/Actors/BP_PlayerProjectile
-MRUItem2=/Game/Assets/fence-gate
-MRUItem3=/Game/ThirdPerson/Blueprints/Actors/BP_Damage
-MRUItem4=/Game/ThirdPerson/Blueprints/Actors/BP_MaxHealth
-MRUItem5=/Game/ThirdPerson/Blueprints/Actors/BP_IronFence
-MRUItem6=/Game/ThirdPerson/Blueprints/AI/BP_AIZombie
-MRUItem7=/Game/ThirdPerson/Blueprints/AI/BP_AIVampire
-MRUItem8=/Game/ThirdPerson/Blueprints/AI/BP_AISkeleton
-MRUItem9=/Game/ThirdPerson/Blueprints/Actors/BP_SpawnAI
-MRUItem10=/Game/ThirdPerson/Blueprints/AI/BP_AIEnemy
-MRUItem11=/Game/ThirdPerson/UI/WBP_PlayerUI
-MRUItem12=/Game/ThirdPerson/Blueprints/AI/BP_AIManager
+MRUItem0=/Game/ThirdPerson/Blueprints/AI/BP_AIManager
+MRUItem1=/Game/ThirdPerson/Blueprints/Actors/BP_IronFence
+MRUItem2=/Game/ThirdPerson/Blueprints/Actors/BP_PlayerProjectile
+MRUItem3=/Game/ThirdPerson/Blueprints/Actors/BP_EnnemyProjectile
+MRUItem4=/Game/Assets/fence-gate
+MRUItem5=/Game/ThirdPerson/Blueprints/Actors/BP_Damage
+MRUItem6=/Game/ThirdPerson/Blueprints/Actors/BP_MaxHealth
+MRUItem7=/Game/ThirdPerson/Blueprints/AI/BP_AIZombie
+MRUItem8=/Game/ThirdPerson/Blueprints/AI/BP_AIVampire
+MRUItem9=/Game/ThirdPerson/Blueprints/AI/BP_AISkeleton
+MRUItem10=/Game/ThirdPerson/Blueprints/Actors/BP_SpawnAI
+MRUItem11=/Game/ThirdPerson/Blueprints/AI/BP_AIEnemy
+MRUItem12=/Game/ThirdPerson/UI/WBP_PlayerUI
 MRUItem13=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem14=/Game/Assets/road_road
 MRUItem15=/Game/Assets/rocks-tall_rocks_tall
@@ -1456,6 +1458,7 @@ PlayerStart.WorldPartition=True
 PlayerStart.Input=True
 PlayerStart.Actor=True
 BP_PlayerProjectile_C.Default=True
+BP_IronFence_C.Default=True
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -2010,7 +2013,7 @@ bMaterialQualityUsed[3]=0
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=333.600
-WindowSize=X=1288.800 Y=728.800
+WindowSize=X=1290.400 Y=730.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
