--- a/DomeKeeper/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/DomeKeeper/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -162,11 +162,18 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 
 [DetailCustomWidgetExpansion]
 InputMappingContext=InputMappingContext.Mappings.ActionMappings
-InputAction=
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Interact.IA_Interact
 PhysicsConstraintComponent=PhysicsConstraintComponent.Constraint Behavior.Projection,PhysicsConstraintComponent.Angular Limits.Swing Limits,PhysicsConstraintComponent.Angular Limits.Twist Limits,PhysicsConstraintComponent.AngularMotor.Orientation Drive,PhysicsConstraintComponent.AngularMotor.Velocity Drive,PhysicsConstraintComponent.LinearMotor.Linear Position Drive,PhysicsConstraintComponent.LinearMotor.Linear Velocity Drive
 StaticMeshComponent=
 BP_ressources_C=StaticMeshComponent.Physics.ConstraintsGroup
 K2Node_VariableGet=StaticMeshComponent.Physics.ConstraintsGroup
+BP_ThirdPersonCharacter_C=StaticMeshComponent.Physics.ConstraintsGroup
+SkeletalMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup
+K2Node_VariableSet=StaticMeshComponent.Physics.ConstraintsGroup
+CharacterMovementComponent=StaticMeshComponent.Physics.ConstraintsGroup
+Object=StaticMeshComponent.Physics.ConstraintsGroup
+PropertyWrapper=StaticMeshComponent.Physics.ConstraintsGroup
+K2Node_MacroInstance=StaticMeshComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
 AssetPropertyPicker.ThumbnailSize=2
@@ -206,29 +213,35 @@ PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 CableComponent="\"Object\" "
-InputAction="\"Object\" "
-DataAsset="\"Object\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[14]\" "
+InputAction="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Triggers.Triggers[2]\" "
+DataAsset="\"Object\" \"Object.Action.Triggers\" \"Object.Action.Triggers.Triggers[2]\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[14].Triggers\" "
 SphereComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 StaticMeshComponent="\"Object\" "
 PhysicsConstraintComponent="\"Object\" "
+CharacterMovementComponent="\"Object\" "
+PawnMovementComponent="\"Object\" "
+NavMovementComponent="\"Object\" "
+MovementComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/BP_ressources.BP_ressources
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
+OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
+OpenAssetsAtExit=/Game/ThirdPerson/Input/Actions/IA_Interact.IA_Interact
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/BP_ressources
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem2=/Game/ThirdPerson/Input/IMC_Default
-MRUItem3=/Game/ThirdPerson/Input/Actions/IA_Interact
+MRUItem0=/Game/ThirdPerson/Input/Actions/IA_Interact
+MRUItem1=/Game/ThirdPerson/Input/IMC_Default
+MRUItem2=/Game/BP_ressources
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -415,11 +428,42 @@ SceneComponent.ComponentReplication=True
 SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
+K2Node_CustomEvent.GraphNodeDetail=True
+K2Node_CustomEvent.Graph=True
+K2Node_CustomEvent.Inputs=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement: Gravity=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+K2Node_CallFunction.Graph=True
 
 [AssetEditorToolkitTabLocation]
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
 /Game/BP_ressources.BP_ressources=0
+/Game/ThirdPerson/Input/Actions/IA_Interact.IA_Interact=0
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
@@ -432,6 +476,7 @@ LastLogListing=PIE
 
 [DetailCategoriesAdvanced]
 CableComponent.Cable=False
+InputAction.Action=False
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -498,7 +543,7 @@ GraphEditorQuickJumps=()
 
 [RootWindow]
 ScreenPosition=X=640.000 Y=334.400
-WindowSize=X=1281.600 Y=721.600
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
