--- a/CardGame/Config/DefaultEngine.ini
+++ b/CardGame/Config/DefaultEngine.ini
@@ -82,6 +82,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/CardGame")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/CardGame")
+GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
