--- a/CardGame/Config/DefaultGame.ini
+++ b/CardGame/Config/DefaultGame.ini
@@ -9,3 +9,16 @@ InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
 
 [SectionsToSave]
 +Section=StartupActions
+
+[/Script/CommonInput.CommonInputSettings]
+InputData=/Game/Blueprints/Widget/CommonUI/InputData.InputData_C
+
+[CommonInputPlatformSettings_Windows CommonInputPlatformSettings]
+DefaultInputType=MouseAndKeyboard
+bSupportsMouseAndKeyboard=True
+bSupportsTouch=False
+bSupportsGamepad=True
+DefaultGamepadName=Windows
+bCanChangeGamepadType=True
++ControllerData=/Game/Blueprints/Widget/CommonUI/InputBaseControllerData_PC.InputBaseControllerData_PC_C
+
