--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -330,19 +330,17 @@ LastLevel=/Game/Map
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
-RecentAssetEditors=TextureEditor
-RecentAssetEditors=MaterialEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=TextureEditor
+RecentAssetEditors=MaterialEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=EnumEditor
 RecentAssetEditors=
@@ -355,8 +353,6 @@ OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_SpellCard.WBP_SpellCard
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Line.WBP_Line
 OpenAssetsAtExit=/Game/Blueprints/Widget/CommonUI/InputActionDataTable.InputActionDataTable
 OpenAssetsAtExit=/Game/Blueprints/Widget/CommonUI/InputBaseControllerData_PC.InputBaseControllerData_PC
-OpenAssetsAtExit=/Game/Blueprints/Widget/CommonUI/WBP_CommonWidget.WBP_CommonWidget
-OpenAssetsAtExit=/Game/Blueprints/Widget/CommonUI/WBP_CommonActivableWidget.WBP_CommonActivableWidget
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -369,22 +365,20 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Materials/dotshader
-MRUItem1=/Game/Materials/M_TestComic
-MRUItem2=/Game/Blueprints/Widget/CommonUI/WBP_CommonActivableWidget
-MRUItem3=/Game/Blueprints/BP_PlayerController
-MRUItem4=/Game/Blueprints/Widget/CommonUI/WBP_CommonWidget
-MRUItem5=/Game/Blueprints/Widget/CommonUI/InputBaseControllerData_PC
-MRUItem6=/Game/Blueprints/Widget/CommonUI/InputActionDataTable
-MRUItem7=/Game/Blueprints/Widget/WBP_Line
-MRUItem8=/Game/Blueprints/Widget/WBP_SpellCard
-MRUItem9=/Game/Blueprints/Widget/CommonUI/InputData
-MRUItem10=/Game/Blueprints/BP_CardGameMode
-MRUItem11=/Game/Blueprints/Widget/WBP_Card
-MRUItem12=/Game/Blueprints/Widget/WBP_Board
-MRUItem13=/CommonUI/GenericInputActionDataTable
-MRUItem14=/Game/Blueprints/E_CharacterCard
-MRUItem15=/Game/Map
+MRUItem0=/Game/Blueprints/Widget/CommonUI/InputBaseControllerData_PC
+MRUItem1=/Game/Blueprints/Widget/CommonUI/InputActionDataTable
+MRUItem2=/Game/Blueprints/Widget/WBP_Line
+MRUItem3=/Game/Blueprints/Widget/WBP_SpellCard
+MRUItem4=/Game/Blueprints/Widget/CommonUI/InputData
+MRUItem5=/Game/Blueprints/BP_PlayerController
+MRUItem6=/Game/Blueprints/BP_CardGameMode
+MRUItem7=/Game/Blueprints/Widget/WBP_Card
+MRUItem8=/Game/Blueprints/Widget/WBP_Board
+MRUItem9=/Game/Materials/dotshader
+MRUItem10=/Game/Materials/M_TestComic
+MRUItem11=/CommonUI/GenericInputActionDataTable
+MRUItem12=/Game/Blueprints/E_CharacterCard
+MRUItem13=/Game/Map
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -501,18 +495,18 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/Materials
+ContentBrowserDrawer.SelectedPaths=/Game/Blueprints/Widget/CommonUI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserDrawer.JumpMRU=/All/Game/Materials
-ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget/CommonUI
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints/Widget
 ContentBrowserDrawer.JumpMRU=/All/Game/Blueprints
+ContentBrowserDrawer.JumpMRU=/All/Game/Materials
+ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/EngineData/Engine
 ContentBrowserDrawer.JumpMRU=/All/EngineData
@@ -1237,7 +1231,7 @@ MaterialExpressionConstant.MaterialExpressionConstant=True
 MaterialExpressionConstant.MaterialExpression=True
 Texture2D.LevelOfDetail=True
 Texture2D.Compression=True
-Texture2D.Interchange =True
+Texture2D.Interchange=True
 Texture2D.Texture=True
 Texture2D.Adjustments=True
 Texture2D.File Path=True
@@ -1262,15 +1256,15 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 [DetailPropertyExpansion]
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Render Transform.RenderTransform\" "
-Widget=
-Visual=
+Widget="\"Object.Render Transform.RenderTransform\" "
+Visual="\"Object.Render Transform.RenderTransform\" "
 Object=
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" "
 WBP_Array_C=
-UserWidget=
+UserWidget="\"Object.Render Transform.RenderTransform\" "
 WBP_Card_C="\"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
@@ -1286,7 +1280,7 @@ ModelingComponentsSettings="\"Object.Modeling Tools.Modeling Tools|New Mesh Obje
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
-WBP_Board_C=
+WBP_Board_C="\"Object.Render Transform.RenderTransform\" "
 WBP_SpellCard_C=
 WBP_Line_C=
 CommonInputActionDataBase="\"Struct.KeyboardInputTypeInfo\" \"Struct.GamepadInputOverrides\" "
@@ -1341,8 +1335,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=text
 TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2555,8 +2549,8 @@ TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
 LastLogListing=PIE
