try to make some animation

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -323,6 +323,11 @@ TakeRecorderMicrophoneAudioManager=
 MovieSceneAnimationTrackRecorderEditorSettings=
 TakeRecorderWorldSourceSettings=
 BP_PlayerController_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray
+K2Node_BreakStruct=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray
+K2Node_FunctionEntry=
+EdGraph=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray
+GetIndexPositionFromCenter=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray
+GetIndexPositionFromCenter_14=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray
 
 [EditorStartup]
 LastLevel=/Game/Map
@@ -330,6 +335,7 @@ LastLevel=/Game/Map
 [AssetEditorSubsystem]
 CleanShutdown=True
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -353,6 +359,7 @@ OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_SpellCard.WBP_SpellCard
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Line.WBP_Line
 OpenAssetsAtExit=/Game/Blueprints/Widget/CommonUI/InputActionDataTable.InputActionDataTable
 OpenAssetsAtExit=/Game/Blueprints/Widget/CommonUI/InputBaseControllerData_PC.InputBaseControllerData_PC
+OpenAssetsAtExit=/Game/Blueprints/BPFL_Card.BPFL_Card
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -365,20 +372,21 @@ ScaleFactor=1
 bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/Blueprints/Widget/CommonUI/InputBaseControllerData_PC
-MRUItem1=/Game/Blueprints/Widget/CommonUI/InputActionDataTable
-MRUItem2=/Game/Blueprints/Widget/WBP_Line
-MRUItem3=/Game/Blueprints/Widget/WBP_SpellCard
-MRUItem4=/Game/Blueprints/Widget/CommonUI/InputData
-MRUItem5=/Game/Blueprints/BP_PlayerController
-MRUItem6=/Game/Blueprints/BP_CardGameMode
-MRUItem7=/Game/Blueprints/Widget/WBP_Card
-MRUItem8=/Game/Blueprints/Widget/WBP_Board
-MRUItem9=/Game/Materials/dotshader
-MRUItem10=/Game/Materials/M_TestComic
-MRUItem11=/CommonUI/GenericInputActionDataTable
-MRUItem12=/Game/Blueprints/E_CharacterCard
-MRUItem13=/Game/Map
+MRUItem0=/Game/Blueprints/BPFL_Card
+MRUItem1=/Game/Blueprints/Widget/CommonUI/InputBaseControllerData_PC
+MRUItem2=/Game/Blueprints/Widget/CommonUI/InputActionDataTable
+MRUItem3=/Game/Blueprints/Widget/WBP_Line
+MRUItem4=/Game/Blueprints/Widget/WBP_SpellCard
+MRUItem5=/Game/Blueprints/Widget/CommonUI/InputData
+MRUItem6=/Game/Blueprints/BP_PlayerController
+MRUItem7=/Game/Blueprints/BP_CardGameMode
+MRUItem8=/Game/Blueprints/Widget/WBP_Card
+MRUItem9=/Game/Blueprints/Widget/WBP_Board
+MRUItem10=/Game/Materials/dotshader
+MRUItem11=/Game/Materials/M_TestComic
+MRUItem12=/CommonUI/GenericInputActionDataTable
+MRUItem13=/Game/Blueprints/E_CharacterCard
+MRUItem14=/Game/Map
 
 [UMGSequencerSettings SequencerSettings]
 AutoChangeMode=None
@@ -1249,6 +1257,9 @@ MaterialExpressionDivide.MaterialExpressionDivide=True
 MaterialExpressionDivide.MaterialExpression=True
 MaterialExpressionSaturate.MaterialExpression=True
 K2Node_BreakStruct.PinOptions=True
+K2Node_Tunnel.Graph=True
+K2Node_Tunnel.Inputs=True
+K2Node_Tunnel.Outputs=True
 
 [PlacementMode]
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
@@ -1256,15 +1267,15 @@ RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraAc
 [DetailPropertyExpansion]
 CameraActor="\"Object.CameraActor.CameraComponent.Object.PostProcess.PostProcessSettings\" "
 Image="\"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Appearance.Brush.TintColor\" \"Object.Render Transform.RenderTransform\" "
-Widget="\"Object.Render Transform.RenderTransform\" "
-Visual="\"Object.Render Transform.RenderTransform\" "
+Widget=
+Visual=
 Object=
 CanvasPanel="\"Object.Render Transform.RenderTransform\" "
 PanelWidget="\"Object.Render Transform.RenderTransform\" "
 VerticalBox="\"Object.Render Transform.RenderTransform\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" "
 WBP_Array_C=
-UserWidget="\"Object.Render Transform.RenderTransform\" "
+UserWidget=
 WBP_Card_C="\"Object.Render Transform.RenderTransform\" "
 SizeBox="\"Object.Render Transform.RenderTransform\" "
 ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
@@ -1280,7 +1291,7 @@ ModelingComponentsSettings="\"Object.Modeling Tools.Modeling Tools|New Mesh Obje
 TextBlock="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Render Transform.RenderTransform\" "
 Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Render Transform.RenderTransform\" "
-WBP_Board_C="\"Object.Render Transform.RenderTransform\" "
+WBP_Board_C=
 WBP_SpellCard_C=
 WBP_Line_C=
 CommonInputActionDataBase="\"Struct.KeyboardInputTypeInfo\" \"Struct.GamepadInputOverrides\" "
@@ -1293,7 +1304,7 @@ DebugCameraControllerSettings="\"Object.General.CycleViewModes\" "
 CommonHierarchicalScrollBox="\"Object.Render Transform.RenderTransform\" "
 ScrollBox="\"Object.Render Transform.RenderTransform\" "
 WBP_CommonWidget_C="\"Object.Render Transform.RenderTransform\" "
-CommonUserWidget="\"Object.Render Transform.RenderTransform\" "
+CommonUserWidget=
 WBP_CommonActivableWidget_C="\"Object.Render Transform.RenderTransform\" "
 CommonActivatableWidget="\"Object.Render Transform.RenderTransform\" "
 
@@ -1314,6 +1325,7 @@ CommonActivatableWidget="\"Object.Render Transform.RenderTransform\" "
 /Game/Materials/M_TestComic.M_TestComic=0
 /Game/Blueprints/Widget/CommonUI/WBP_CommonWidget.WBP_CommonWidget=0
 /Game/Blueprints/Widget/CommonUI/WBP_CommonActivableWidget.WBP_CommonActivableWidget=0
+/Game/Blueprints/BPFL_Card.BPFL_Card=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1335,8 +1347,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
@@ -2549,8 +2561,8 @@ TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
 LastLogListing=PIE
@@ -2594,6 +2606,7 @@ TakeRecorderProjectSettings=True
 
 [SuppressableDialogs]
 DeleteConfirmationVariable_Warning=False
+DeleteConfirmationFunction_Warning=False
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
