fix full random card each turn
Now each hands are full at the start of the game and they are displayed when it's player's turn

--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -99,7 +99,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-8,Y=-8)
+NewWindowPosition=(X=0,Y=1)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -126,14 +126,14 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2560,Y=1358)
+LastSize=(X=2554,Y=1358)
 LastExecutedLaunchDevice=Windows@PC-THEO
 LastExecutedLaunchName=PC-THEO
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=-8,Y=-8)
-NewWindowWidth=2560
+MultipleInstancePositions=(X=0,Y=1)
+NewWindowWidth=2554
 NewWindowHeight=1358
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -301,7 +301,7 @@ K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWra
 K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 WBP_Card_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 WBP_Board_C=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
-TextBlock=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray
+TextBlock=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWrapper.DefaultValueCategory.WarriorCardArray,PropertyWrapper.DefaultValueCategory.CardParam,K2Node_VariableGet.DefaultValueCategory.WarriorCardArray,K2Node_VariableGet.DefaultValueCategory.CardParam
 CommonInputSettings=EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,CommonInputSettings.Input.CommonInputPlatformSettings_Windows
 InputModifierSmoothDelta=
 InputModifierDeadZone=
@@ -350,26 +350,26 @@ EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWr
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 DebuggerAttached=False
 RecentAssetEditors=DataTableEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=DataTableEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=BlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
-RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=UserDefinedStructureEditor
 RecentAssetEditors=TextureEditor
 RecentAssetEditors=MaterialEditor
@@ -381,12 +381,10 @@ OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Card.WBP_Card
 OpenAssetsAtExit=/Game/Blueprints/BP_CardGameMode.BP_CardGameMode
 OpenAssetsAtExit=/Game/Blueprints/BP_PlayerController.BP_PlayerController
 OpenAssetsAtExit=/Game/Blueprints/Tuto/BPI_AddCard.BPI_AddCard
-OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_SpellCard.WBP_SpellCard
 OpenAssetsAtExit=/Game/Blueprints/Widget/WBP_Line.WBP_Line
 OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_CardHand.WBP_CardHand
 OpenAssetsAtExit=/Game/Blueprints/BPFL_Card.BPFL_Card
 OpenAssetsAtExit=/Game/Blueprints/Tuto/WBP_SpellCardTuto.WBP_SpellCardTuto
-OpenAssetsAtExit=/Game/Blueprints/Tuto/DT_CardParamWarrior.DT_CardParamWarrior
 
 [UMGEditor.Designer]
 bCommonResolutionSelected=False
@@ -400,23 +398,23 @@ bCanPreviewSwapAspectRatio=False
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/Blueprints/Tuto/DT_CardParamWarrior
-MRUItem1=/Game/Blueprints/Tuto/BPI_AddCard
-MRUItem2=/Game/Blueprints/Tuto/DT_CardParamRogue
-MRUItem3=/Game/Blueprints/Tuto/DT_CardParamWizard
-MRUItem4=/Game/Blueprints/Tuto/DT_CardParam
-MRUItem5=/Game/Blueprints/Tuto/WBP_SpellCardTuto
-MRUItem6=/Game/Blueprints/BPFL_Card
-MRUItem7=/Game/Blueprints/Tuto/WBP_CardHUD
-MRUItem8=/Game/Blueprints/Tuto/WBP_CardHand
-MRUItem9=/Game/Blueprints/Widget/CommonUI/InputBaseControllerData_PC
-MRUItem10=/Game/Blueprints/Widget/CommonUI/InputActionDataTable
-MRUItem11=/Game/Blueprints/Widget/WBP_Line
-MRUItem12=/Game/Blueprints/Widget/WBP_SpellCard
-MRUItem13=/Game/Blueprints/Widget/CommonUI/InputData
-MRUItem14=/Game/Blueprints/BP_PlayerController
-MRUItem15=/Game/Blueprints/BP_CardGameMode
-MRUItem16=/Game/Blueprints/Widget/WBP_Card
-MRUItem17=/Game/Blueprints/Widget/WBP_Board
+MRUItem1=/Game/Blueprints/Tuto/WBP_SpellCardTuto
+MRUItem2=/Game/Blueprints/BPFL_Card
+MRUItem3=/Game/Blueprints/Tuto/WBP_CardHand
+MRUItem4=/Game/Blueprints/Widget/WBP_Line
+MRUItem5=/Game/Blueprints/Widget/WBP_SpellCard
+MRUItem6=/Game/Blueprints/Tuto/BPI_AddCard
+MRUItem7=/Game/Blueprints/BP_PlayerController
+MRUItem8=/Game/Blueprints/BP_CardGameMode
+MRUItem9=/Game/Blueprints/Widget/WBP_Card
+MRUItem10=/Game/Blueprints/Widget/WBP_Board
+MRUItem11=/Game/Blueprints/Tuto/DT_CardParamRogue
+MRUItem12=/Game/Blueprints/Tuto/DT_CardParamWizard
+MRUItem13=/Game/Blueprints/Tuto/DT_CardParam
+MRUItem14=/Game/Blueprints/Tuto/WBP_CardHUD
+MRUItem15=/Game/Blueprints/Widget/CommonUI/InputBaseControllerData_PC
+MRUItem16=/Game/Blueprints/Widget/CommonUI/InputActionDataTable
+MRUItem17=/Game/Blueprints/Widget/CommonUI/InputData
 MRUItem18=/Game/Blueprints/Tuto/S_CardParam
 MRUItem19=/Game/Materials/dotshader
 MRUItem20=/Game/Materials/M_TestComic
@@ -517,7 +515,7 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Engine/EditorBlueprintResources
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Widget
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
@@ -525,6 +523,7 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.JumpMRU=/All/Game/Blueprints/Widget
 ContentBrowserTab1.JumpMRU=/All/EngineData/Engine/EditorBlueprintResources
 ContentBrowserTab1.JumpMRU=/All/Game/StarterContent/Architecture
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1390,8 +1389,8 @@ DeveloperSettingsBackedByCVars="\"Object.Enhanced Input.PlatformSettings\" \"Obj
 PaperImporterSettings="\"Object.ImportSettings.NormalMapTextureSuffixes\" \"Object.ImportSettings.BaseMapTextureSuffixes\" "
 DataflowSettings="\"Object.NodeColors.NodeColorsMap\" "
 ModelingComponentsSettings="\"Object.Modeling Tools.Modeling Tools|New Mesh Objects\" "
-TextBlock="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
-TextLayoutWidget="\"Object.Appearance.Font\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
+TextBlock=
+TextLayoutWidget=
 Button="\"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Normal.ImageSize\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Normal.TintColor\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings\" \"Object.Appearance.WidgetStyle.Normal.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.NormalForeground\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Appearance.WidgetStyle.Hovered.TintColor\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings\" \"Object.Appearance.WidgetStyle.Hovered.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.HoveredForeground\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.WidgetStyle.Pressed.TintColor\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings\" \"Object.Appearance.WidgetStyle.Pressed.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.PressedForeground\" \"Object.Appearance.WidgetStyle.Disabled\" \"Object.Appearance.WidgetStyle.Disabled.TintColor\" \"Object.Appearance.WidgetStyle.Disabled.OutlineSettings.Color\" \"Object.Appearance.WidgetStyle.DisabledForeground\" \"Object.Layout.Slot\" \"Object.Render Transform.RenderTransform\" "
 WBP_Board_C=
 WBP_SpellCard_C=
@@ -1464,8 +1463,8 @@ bHostFindInBlueprintsInGlobalTab=True
 bNavigateToNativeFunctionsFromCallNodes=True
 bDoubleClickNavigatesToParent=True
 bEnableTypePromotion=True
-TypePromotionPinDenyList=string
 TypePromotionPinDenyList=text
+TypePromotionPinDenyList=string
 BreakpointReloadMethod=RestoreAll
 bEnablePinValueInspectionTooltips=True
 bEnableNamespaceEditorFeatures=True
