--- a/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/CardGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -99,7 +99,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=0,Y=1)
+NewWindowPosition=(X=0,Y=0)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -126,15 +126,15 @@ bOneHeadsetEachProcess=False
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=2554,Y=1358)
+LastSize=(X=2554,Y=1360)
 LastExecutedLaunchDevice=Windows@PC-THEO
 LastExecutedLaunchName=PC-THEO
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
-MultipleInstancePositions=(X=0,Y=1)
+MultipleInstancePositions=(X=0,Y=0)
 NewWindowWidth=2554
-NewWindowHeight=1358
+NewWindowHeight=1360
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -350,7 +350,7 @@ EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.TextureArray,PropertyWr
 LastLevel=/Game/Map
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=DataTableEditor
 RecentAssetEditors=WidgetBlueprintEditor
@@ -2677,8 +2677,8 @@ TextureEditor.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
-RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=E:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=D:/UnrealEngine/UE_5.4/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [MessageLog]
 LastLogListing=PIE
